--- a/concurrency_related/asyncio_tute/docu/04_await.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_await.ipynb
@@ -7,27 +7,24 @@
    "source": [
     "### await\n",
     "\n",
-    "Suspend the execution of coroutine on an awaitable object. Can only be used inside a coroutine function.\n",
-    "\n",
-    "- coro\n",
-    "    - invoke the coro func content\n",
-    "- task\n",
-    "    - cede control, then when awaited task finish, original task/coro is added back to event loop\n",
-    "    - details:\n",
-    "        - await add callback (which resume original) to task's callbacks\n",
-    "        - cede control to event loop\n",
-    "        - when finish, add callbacks to event loop\n",
-    "- other\n",
-    "    - https://docs.python.org/3/reference/expressions.html#await\n",
-    "- details:\n",
-    "    - calls `__await__` method on awaitable\n",
-    "    - propagates the yield up call chain\n",
-    "    - yield: pauses exec and return contorl to caller"
+    "Suspend the execution of coroutine on an awaitable object. \n",
+    "- An awaitable object can be a coroutine or an object with `__await__` method.\n",
+    "- Can only be used inside a coroutine function.\n",
+    "- Behavior depends on the type of awaitable:\n",
+    "    - Task \n",
+    "        - Cede control (B)\n",
+    "        - Additionally, in general, ensure such that:\n",
+    "            - When awaited task finishes, the original task or coro is added back to the event loop to-do list.\n",
+    "            - For example:\n",
+    "                - The await instruction adds a callback to the original task/coroutine (A) to the task's callback list (B)\n",
+    "                - When the awaited task is picked and finishes, add the callback to the event loop's to-do list\n",
+    "    - Coroutine\n",
+    "        - Does not cede control (Z), behavior same as normal funcs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d65a8ca4",
    "metadata": {},
    "outputs": [],
@@ -37,50 +34,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3c86a08b",
+   "execution_count": null,
+   "id": "f82b3bc1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to plant a tree...\n",
-      "Starting to plant a tree...\n",
-      "Starting to plant a tree...\n",
-      "Tree planted!\n",
-      "Tree planted!\n",
-      "Tree planted!\n"
+      "Digging the hole...\n",
+      "Digging the hole...\n",
+      "Other instructions associated with planting a tree ..\n",
+      "Other instructions associated with planting a tree ..\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[None, None, None]"
+       "[None, None]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "async def dig_the_hole():\n",
-    "    await asyncio.sleep(1)\n",
+    "    print(\"Digging the hole...\")\n",
     "\n",
     "async def plant_a_tree():\n",
-    "    print(\"Starting to plant a tree...\")\n",
     "    dig_the_hole_task = asyncio.create_task(dig_the_hole())\n",
-    "    await dig_the_hole_task\n",
+    "    await dig_the_hole_task # B\n",
+    "    # A: resume point in the call back\n",
     "\n",
-    "    # Other instructions associated with planting a tree.\n",
-    "    print(\"Tree planted!\")\n",
+    "    print(\"Other instructions associated with planting a tree ..\")\n",
     "\n",
     "await asyncio.gather(\n",
     "    plant_a_tree(),\n",
     "    plant_a_tree(),\n",
-    "    plant_a_tree(),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7872dbb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am coro_a(). Hi!\n",
+      "I am coro_a(). Hi!\n",
+      "I am coro_b(). I sure hope no one hogs the event loop...\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def coro_a():\n",
+    "#    await asyncio.sleep(0) # fix by awaiting another awaitable that yields control\n",
+    "   print(\"I am coro_a(). Hi!\")\n",
+    "\n",
+    "async def coro_b():\n",
+    "   print(\"I am coro_b(). I sure hope no one hogs the event loop...\")\n",
+    "\n",
+    "async def main():\n",
+    "   task_b = asyncio.create_task(coro_b())\n",
+    "   num_repeats = 2\n",
+    "   for _ in range(num_repeats):\n",
+    "      await coro_a() # Z: control never ceded to event loop, so task_b can not start\n",
+    "   await task_b\n",
+    "\n",
+    "await main()"
    ]
   },
   {
