improve task docu

--- a/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
+++ b/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
@@ -8,9 +8,11 @@
     "### Tasks\n",
     "\n",
     "- Coro tied to event loop\n",
-    "    - It maintains list of callback functions, which are used in the event loop\n",
+    "    - It maintains list of callback functions (A), which are used in the event loop\n",
+    "        - A callback is a subroutine function which is passed as an argument to be executed at some point in the future.\n",
     "    - On creation (B), it is auto scheduled for execution, by adding a callback to run it in the event loop's to-do list\n",
-    "        - note the task itself is not added to the event loop, so there is slight chance of having gc related issues\n",
+    "        - Note it is not run immediately and need to wait for event loop to pick it up\n",
+    "        - Note the task itself is not added to the event loop, so there is slight chance of having gc related issues\n",
     "- gathered in a collection to have strong ref for avoiding gc"
    ]
   },
@@ -96,12 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6fe03397",
    "metadata": {},
    "outputs": [],
    "source": [
-    "task._callbacks"
+    "task._callbacks # A"
    ]
   },
   {
