--- a/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
+++ b/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
@@ -7,13 +7,15 @@
    "source": [
     "### Tasks\n",
     "\n",
-    "- Coro tied to event loop\n",
+    "- Coroutine tied to event loop\n",
     "    - It maintains list of callback functions (A), which are used in the event loop\n",
     "        - A callback is a subroutine function which is passed as an argument to be executed at some point in the future.\n",
     "    - On creation (B), it is auto scheduled for execution, by adding a callback to run it in the event loop's to-do list\n",
     "        - Note it is not run immediately and need to wait for event loop to pick it up\n",
     "        - Note the task itself is not added to the event loop, so there is slight chance of having gc related issues\n",
-    "- gathered in a collection to have strong ref for avoiding gc"
+    "- Gathered in a collection to have strong ref for avoiding gc\n",
+    "- It is a subclass of asyncio.Future, it mark itself as done when coro is completed\n",
+    "- It runs the coroutine"
    ]
   },
   {
