--- a/concurrency_related/asyncio_tute/docu/04_await.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_await.ipynb
@@ -19,7 +19,8 @@
     "                - The await instruction adds a callback to the original task/coroutine (A) to the task's callback list (B)\n",
     "                - When the awaited task is picked and finishes, add the callback to the event loop's to-do list\n",
     "    - Coroutine\n",
-    "        - Does not cede control (Z), behavior same as normal funcs"
+    "        - Does not cede control (Z), behavior same as normal funcs\n",
+    "        - Note this can be a way for asyncio to differentiate between task that need or not need CPU time."
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f82b3bc1",
    "metadata": {},
    "outputs": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7872dbb0",
    "metadata": {},
    "outputs": [
