--- a/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
@@ -20,7 +20,7 @@
     "        - if coro is used for first time, arg must be None\n",
     "        - if coro was paused and is now being resumed, arg will be the return value of the yield that originally paused execution\n",
     "- In a coroutine, the only way to cede control is to await an awaitable that yields in its `__await__` method.\n",
-    "- yield pauses execution and returns control to caller\n",
+    "    - yield pauses execution and returns control to caller\n",
     "- when coroutine finishes, it raises StopIteration with return value"
    ]
   },
@@ -53,8 +53,8 @@
     "        print(f\"Rock.__await__ called.\")\n",
     "\n",
     "        value_sent_in = yield 7 \n",
-    "        # 3.this yield pauses coroutine execution; \n",
-    "        # 12. resume from where yielded, which returns the arg from send()\n",
+    "        # A3.this yield pauses coroutine execution; \n",
+    "        # B2. resume from where yielded, which returns the arg from send()\n",
     "\n",
     "        print(f\"Rock.__await__ resuming with value: {value_sent_in}.\")\n",
     "        return value_sent_in\n",
@@ -65,25 +65,25 @@
     "    print(\"Awaiting the awaitable rock...\")\n",
     "\n",
     "    value_from_rock = await rock \n",
-    "    # 2. calls __await__; \n",
-    "    # 4. propagates yielded value\n",
+    "    # A2. calls __await__; \n",
+    "    # A4. propagates yielded value\n",
     "\n",
     "    print(f\"coro received value: {value_from_rock} from rock.\")\n",
     "    return value_from_rock\n",
-    "    # 13. when coro finishes, it raises StopIteration with return value\n",
+    "    # B3. when coro finishes, it raises StopIteration with return value\n",
     "\n",
     "coroutine = main()\n",
     "print(f\"calling send with: None.\")\n",
     "\n",
     "intermediate_result = coroutine.send(None) \n",
-    "# 1. start coro with send(None)\n",
-    "# 5. receives yielded value\n",
+    "# A1. start coro with send(None)\n",
+    "# A5. receives yielded value\n",
     "\n",
     "print(f\"{intermediate_result = }\\n\")\n",
     "\n",
     "try:\n",
     "    print(f\"calling send with: 42.\")\n",
-    "    coroutine.send(42) # 11. Resume coro, send 42\n",
+    "    coroutine.send(42) # B1. Resume coro, send 42\n",
     "except StopIteration as e:\n",
     "    returned_value = e.value\n",
     "    print(f\"{returned_value = }\")"
