--- a/concurrency_related/asyncio_tute/docu/05_asyncio_Future_eg_async_sleep.ipynb
+++ b/concurrency_related/asyncio_tute/docu/05_asyncio_Future_eg_async_sleep.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9860e93b",
+   "metadata": {},
+   "source": [
+    "### Future\n",
+    "\n",
+    "A Future represents an eventual result of an asynchronous operation.\n",
+    "\n",
+    "- It is an awaitable. Coro can await on it (A) until they have a result, exception set, or cancelled. It can be awaited multiple times with same results.\n",
+    "- Typical purpose is to enable low-level callback-based code to work with high-level async/await code, by allowing customised conditions for waiting and resuming.\n",
+    "- Key attributes:\n",
+    "    - State are one of: pending, cancelled, done\n",
+    "    - Result is set when state is transitioned to done (B)\n",
+    "- Task is a subclass of Future (P), callbacks list is implemented in Future (Q)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "637e8eaa",
    "metadata": {},
    "outputs": [],
@@ -13,16 +30,101 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9860e93b",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5134b78c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### using future"
+    "issubclass(asyncio.Task, asyncio.Future) # P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
+   "id": "80a68097",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['_callbacks', 'add_done_callback', 'remove_done_callback']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in dir(asyncio.Future) if 'callback' in i] # Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a21741",
+   "metadata": {},
+   "source": [
+    "### Future example\n",
+    "\n",
+    "- Use future to control when the sleep task is done (A)\n",
+    "- Use a task that monitors time and call set_result (B)\n",
+    "- Cede control to event loop via an awaitable (C)\n",
+    "- The `_sleep_watcher` coro 's task will be invoked once per full cycle of the event loop\n",
+    "    - On each resumption, it'll check time, then pause and cede control back to event loop again (D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad3d9c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class YieldToEventLoop:\n",
+    "    def __await__(self):\n",
+    "        yield # C\n",
+    "\n",
+    "async def _sleep_watcher(future, time_to_wake):\n",
+    "    while True:\n",
+    "        if time.time() >= time_to_wake: # E\n",
+    "            # This marks the future as done.\n",
+    "            future.set_result(None) # B\n",
+    "            break\n",
+    "        else:\n",
+    "            await YieldToEventLoop() # D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2fab2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def async_sleep(seconds: float):\n",
+    "    future = asyncio.Future()\n",
+    "    time_to_wake = time.time() + seconds\n",
+    "    # Add the watcher-task to the event loop.\n",
+    "    watcher_task = asyncio.create_task(_sleep_watcher(future, time_to_wake))\n",
+    "    # Block until the future is marked as done.\n",
+    "    await future # A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "defc60de",
    "metadata": {},
    "outputs": [
@@ -30,12 +132,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning asynchronous sleep at time: 16:45:31.\n",
+      "Beginning asynchronous sleep at time: 17:51:40.\n",
       "I like work. Work work.\n",
       "I like work. Work work.\n",
       "I like work. Work work.\n",
-      "Done asynchronous sleep at time: 16:45:34.\n",
-      "I like long work. Work work.\n"
+      "Done asynchronous sleep at time: 17:51:43.\n"
      ]
     }
    ],
@@ -43,46 +144,14 @@
     "async def other_work():\n",
     "    print(\"I like work. Work work.\")\n",
     "\n",
-    "\n",
-    "async def other_long_work():\n",
-    "    await asyncio.sleep(5)\n",
-    "    print(\"I like long work. Work work.\")\n",
-    "\n",
-    "\n",
-    "async def async_sleep(seconds: float):\n",
-    "    future = asyncio.Future()\n",
-    "    time_to_wake = time.time() + seconds\n",
-    "    # Add the watcher-task to the event loop.\n",
-    "    watcher_task = asyncio.create_task(_sleep_watcher(future, time_to_wake))\n",
-    "    # Block until the future is marked as done.\n",
-    "    await future\n",
-    "\n",
-    "\n",
-    "class YieldToEventLoop:\n",
-    "    def __await__(self):\n",
-    "        yield\n",
-    "\n",
-    "\n",
-    "async def _sleep_watcher(future, time_to_wake):\n",
-    "    while True:\n",
-    "        if time.time() >= time_to_wake:\n",
-    "            # This marks the future as done.\n",
-    "            future.set_result(None)\n",
-    "            break\n",
-    "        else:\n",
-    "            await YieldToEventLoop()\n",
-    "\n",
-    "\n",
     "async def main():\n",
     "    # Add a few other tasks to the event loop, so there's something\n",
     "    # to do while asynchronously sleeping.\n",
     "    work_tasks = [\n",
     "        asyncio.create_task(other_work()),\n",
     "        asyncio.create_task(other_work()),\n",
-    "        asyncio.create_task(other_work()),\n",
-    "        asyncio.create_task(other_long_work()),\n",
+    "        asyncio.create_task(other_work())\n",
     "    ]\n",
-    "\n",
     "    print(\n",
     "        \"Beginning asynchronous sleep at time: \"\n",
     "        f\"{datetime.datetime.now().strftime(\"%H:%M:%S\")}.\"\n",
@@ -92,10 +161,8 @@
     "        \"Done asynchronous sleep at time: \"\n",
     "        f\"{datetime.datetime.now().strftime(\"%H:%M:%S\")}.\"\n",
     "    )\n",
-    "\n",
     "    # asyncio.gather effectively awaits each task in the collection.\n",
     "    await asyncio.gather(*work_tasks)\n",
-    "\n",
     "\n",
     "await main()"
    ]
@@ -103,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f5a949",
+   "id": "00db28a5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
