upd and clean async docu

--- a/concurrency_related/asyncio_tute/docu/02_async_func_coro_gen_iter.ipynb
+++ b/concurrency_related/asyncio_tute/docu/02_async_func_coro_gen_iter.ipynb
@@ -7,13 +7,12 @@
    "source": [
     "### Coroutine\n",
     "\n",
-    "- Coroutine function is defined by `async def` (A), which allows `await`, `async for`, and `async with` to be used within\n",
+    "A generalised subroutine function that can be entered, exited, resumed. This allows for asynchronous behavior.\n",
+    "\n",
     "- Coroutine object is created by running coro function (B)\n",
-    "    - It must be started, it can then be suspended/paused, and resumed. This allows for asynchronous behavior.\n",
     "    - It represents the function's body\n",
-    "- Coroutine and coro func are based on generators and generator funcs.\n",
-    "    - Gen func is a func that yields (C)\n",
-    "    - Generator runs then pauses at each yield, and can be resumed (D)"
+    "    - It's state is stored in the `cr_...` attributes\n",
+    "- Coroutine function is defined by `async def` (A), which allows `await`, `async for`, and `async with` to be used within"
    ]
   },
   {
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a0dd73a6",
    "metadata": {},
    "outputs": [],
@@ -39,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ccef01a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<coroutine object aprint at 0x0000025987502330>"
+       "<coroutine object aprint at 0x000001A3BD16E740>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "828817ab",
    "metadata": {},
    "outputs": [
@@ -101,7 +100,7 @@
        " 'throw']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +111,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "44733826",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<coroutine_wrapper at 0x1a3bd0de920>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coro.__await__()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb052642",
+   "metadata": {},
+   "source": [
+    "### generators\n",
+    "\n",
+    "- Coroutine and coro func are based on generator iterator (type = generator) and generator (generator function).\n",
+    "    - Generator is a function that contains yield expression/stmnt inside (C)\n",
+    "    - Generator runs then pauses at each yield, and can be resumed (D)\n",
+    "    - Note, in earlier py versions, coro were implemented as generator iterator and uses yield from expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "22dfa811",
    "metadata": {},
    "outputs": [],
@@ -126,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "f8145310",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object random_n at 0x0000025987C1ACF0>"
+       "<generator object random_n at 0x000001A3BD16C860>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "a3cf9287",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(function, generator)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(random_n), type(rng)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "fc44f2e8",
    "metadata": {},
    "outputs": [
@@ -158,7 +212,7 @@
        "82"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
