--- a/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
+++ b/concurrency_related/asyncio_tute/docu/03_tasks.ipynb
@@ -13,9 +13,13 @@
     "    - On creation (B), it is auto scheduled for execution, by adding a callback to run it in the event loop's to-do list\n",
     "        - Note it is not run immediately and need to wait for event loop to pick it up\n",
     "        - Note the task itself is not added to the event loop, so there is slight chance of having gc related issues\n",
-    "- Gathered in a collection to have strong ref for avoiding gc\n",
-    "- It is a subclass of asyncio.Future, it mark itself as done when coro is completed\n",
-    "- It runs the coroutine"
+    "        - Note in one version of python: \n",
+    "            - The callback added is the `__step` method of the task, which calls the coroutine's `send` method to start/resume its execution. \n",
+    "            - The event loop (stored in `_loop`) 's `call_soon` method is used to schedule the callback.\n",
+    "            - Post resumption, if not done, it uses the trampoline pattern to reschedule itself by adding its `__step` method back to the event loop's to-do list\n",
+    "\n",
+    "- Can be gathered in a collection to have strong ref for avoiding gc\n",
+    "- It is a subclass of asyncio.Future, it mark itself as done when coro is completed\n"
    ]
   },
   {
