--- a/concurrency_related/asyncio_tute/docu/04_await.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_await.ipynb
@@ -9,6 +9,7 @@
     "\n",
     "Suspend the execution of coroutine on an awaitable object. \n",
     "- An awaitable object can be a coroutine or an object with `__await__` method.\n",
+    "    - `__await__` method must return an iterator (usually a generator iterator).\n",
     "- Can only be used inside a coroutine function.\n",
     "- Behavior depends on the type of awaitable:\n",
     "    - Task \n",
