--- a/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
+++ b/concurrency_related/asyncio_tute/docu/04_coro_inner_workings.ipynb
@@ -15,13 +15,13 @@
    "source": [
     "asyncio leverages 4 components to pass controls\n",
     "- coroutine.send(arg) \n",
-    "    - method to start or resume a coroutine\n",
+    "    - method to start (A1) or resume (B1) a coroutine\n",
     "    - arg\n",
     "        - if coro is used for first time, arg must be None\n",
-    "        - if coro was paused and is now being resumed, arg will be the return value of the yield that originally paused execution\n",
-    "- In a coroutine, the only way to cede control is to await an awaitable that yields in its `__await__` method.\n",
+    "        - if coro was paused and is now being resumed, arg will be the return value of the yield that originally paused execution (B2)\n",
+    "- In a coroutine, the only way to cede control is to await an awaitable that yields in its `__await__` method. (A2, A3)\n",
     "    - yield pauses execution and returns control to caller\n",
-    "- when coroutine finishes, it raises StopIteration with return value"
+    "- when coroutine finishes, it raises StopIteration with return value (B3)"
    ]
   },
   {
