aio reorganize and make placeholders

--- a/concurrency_related/asyncio_tute/docu/02_async_func_coro_gen_iter.ipynb
+++ b/concurrency_related/asyncio_tute/docu/02_async_func_coro_gen_iter.ipynb
@@ -7,12 +7,14 @@
    "source": [
     "### Coroutine\n",
     "\n",
-    "A generalised subroutine function that can be entered, exited, resumed. This allows for asynchronous behavior.\n",
+    "A generalised subroutine that can be entered, exited, resumed. This allows for asynchronous behavior.\n",
     "\n",
-    "- Coroutine object is created by running coro function (B)\n",
-    "    - It represents the function's body\n",
-    "    - It's state is stored in the `cr_...` attributes\n",
-    "- Coroutine function is defined by `async def` (A), which allows `await`, `async for`, and `async with` to be used within"
+    "- It represents the async function's body\n",
+    "- It's state is stored in the `cr_...` attributes\n",
+    "- It is created by running coroutine function (B)\n",
+    "    - Coroutine function is defined by `async def` (A), which allows `await`, `async for`, and `async with` to be used within\n",
+    "- Coroutine and coro func are based on generator iterator (type = generator) and generator (generator function).\n",
+    "    - Note, in earlier py versions, coro were implemented as generator iterator and uses yield from expression"
    ]
   },
   {
@@ -137,10 +139,8 @@
    "source": [
     "### generators\n",
     "\n",
-    "- Coroutine and coro func are based on generator iterator (type = generator) and generator (generator function).\n",
-    "    - Generator is a function that contains yield expression/stmnt inside (C)\n",
-    "    - Generator runs then pauses at each yield, and can be resumed (D)\n",
-    "    - Note, in earlier py versions, coro were implemented as generator iterator and uses yield from expression"
+    "- Generator is a function that contains yield expression/stmnt inside (C)\n",
+    "- Generator runs then pauses at each yield, and can be resumed (D)"
    ]
   },
   {
