--- a/concurrency_related/asyncio_tute/docu/00_high_level_concepts.ipynb
+++ b/concurrency_related/asyncio_tute/docu/00_high_level_concepts.ipynb
@@ -5,7 +5,7 @@
    "id": "9b0ef62f",
    "metadata": {},
    "source": [
-    "### asyncio goals\n",
+    "### Asyncio goals\n",
     "\n",
     "- maximize a single thread's usage\n",
     "- by asynchronously handle I/O\n",
@@ -23,35 +23,31 @@
    "source": [
     "### The bartender analogy\n",
     "\n",
-    "- A bartender (event loop) is responsible for serving multiple customers (coroutines/tasks) efficiently.\n",
-    "- Even though there is only 1 bartender, they can handle multiple customers by switching between them based on signals (await).\n",
-    "- This is due to the fact that customers take time to do things on their own (like drinking or thinking), during which the bartender may be able to attend to other customers.\n",
+    "- A bartender is responsible for serving multiple customers efficiently.\n",
+    "- Even though there is only 1 bartender, they can handle multiple customers by switching between them.\n",
+    "- This is due to the fact that customers take time to do some things on their own (like drinking), during which the bartender may be able to attend to other activities.\n",
+    "\n",
     "Concepts Comparison\n",
     "\n",
-    "| Bartender Analogy Concepts |  Asyncio Concept\n",
+    "| Asyncio Concept | Bartender Analogy Concepts\n",
     "|-----------------|-------------------\n",
-    "| Bartender, common sense, Bartending SOP | Event Loop, asyncio, python\n",
-    "| customer | coroutine / task\n",
-    "| customer doing something but no signal for bartender to walk away yet | await for coroutine\n",
-    "| customer signalling bartender to walk away | await for task"
+    "| Thread | Bartender\n",
+    "| Reactor/Proactor | Looking around the bar for customers needing attention\n",
+    "| Event Loop | The bar\n",
+    "| Awaitable | A servicing activity, mostly one of below 3\n",
+    "| Coroutine | A servicing activity that can be started, paused, and resumed\n",
+    "| Task | Same as above, and can be delayed a bit and is being mentally tracked by the bartender\n",
+    "| Future | The status of the servicing activity that is being tracked by the bartender\n",
+    "| Suspended awaitable | Customer taking time to drink\n",
+    "| Await awaitable | Stop the current servicing activity and proceed to another activity\n",
+    "| Await for coroutine | Same as above, and keep serving current customer until done or next appopriate pause\n",
+    "| Await for task | Same as above above, and see if any other activity need attention"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e6fd18",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c6c60fd",
+   "id": "100622e0",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -65,7 +61,8 @@
    "id": "8f149ea6",
    "metadata": {},
    "source": [
-    "### ref\n",
+    "### Reference \n",
+    "\n",
     "https://docs.python.org/3/contents.html\n",
     "\n",
     "https://docs.python.org/3/glossary.html\n",
