--- a/concurrency_related/asyncio_script/docu/concept/00_high_level_concepts.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/00_high_level_concepts.ipynb
@@ -14,6 +14,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "100622e0",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "### key asyncio concepts\n",
+    "\n",
+    "**Event Loop** -> A loop that invokes and suspends a collection of jobs.\n",
+    "\n",
+    "- **Reactor/Proactor** -> Mechanisms that inform the event loop of I/O events.\n",
+    "\n",
+    "**Awaitable** -> Object that can be awaited. One of below.\n",
+    "\n",
+    "- **Coroutine** -> A generalised subroutine that can be entered, exited, resumed.\n",
+    "\n",
+    "- **Task** -> Coroutine tied to event loop, Used to schedule coroutines concurrently.\n",
+    "\n",
+    "- **Future** -> Represents an eventual result of an asynchronous operation. Parent class of Task.\n",
+    "\n",
+    "**Await awaitable** -> Suspend the execution of coroutine on an awaitable. \n",
+    "\n",
+    "- **Await for coroutine** -> Does not cede control, behaves like normal function call.\n",
+    "\n",
+    "- **Await for task** -> Cede control, schedules the original coroutine to resume when the task completes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e7dcd621",
    "metadata": {
     "vscode": {
@@ -27,34 +57,30 @@
     "- Even though there is only 1 bartender, they can handle multiple customers by switching between them.\n",
     "- This is due to the fact that customers take time to do some things on their own (like drinking), during which the bartender may be able to attend to other activities.\n",
     "\n",
-    "Concepts Comparison\n",
+    "Concepts Analogy:\n",
     "\n",
-    "| Asyncio Concept | Bartender Analogy Concepts\n",
-    "|-----------------|-------------------\n",
-    "| Thread | Bartender\n",
-    "| Reactor/Proactor | Looking around the bar for customers needing attention\n",
-    "| Event Loop | The bar\n",
-    "| Awaitable | A servicing activity, mostly one of below 3\n",
-    "| Coroutine | A servicing activity that can be started, paused, and resumed\n",
-    "| Task | Same as above, and can be delayed a bit and is being mentally tracked by the bartender\n",
-    "| Future | The status of the servicing activity that is being tracked by the bartender\n",
-    "| Suspended awaitable | Customer taking time to drink\n",
-    "| Await awaitable | Stop the current servicing activity and proceed to another activity\n",
-    "| Await for coroutine | Same as above, and keep serving current customer until done or next appopriate pause\n",
-    "| Await for task | Same as above above, and see if any other activity need attention"
+    "**Thread** -> Bartender\n",
+    "\n",
+    "**Event Loop** -> The bar\n",
+    "\n",
+    "- **Reactor/Proactor** -> Looking around the bar for customers needing attention\n",
+    "\n",
+    "**Awaitable** -> A servicing activity, mostly one of below 3\n",
+    "\n",
+    "- **Coroutine** -> A servicing activity that can be started, paused, and resumed\n",
+    "\n",
+    "- **Task** -> Same as above, and can be delayed a bit and is being mentally tracked by the bartender\n",
+    "\n",
+    "- **Future** -> The status of the servicing activity that is being tracked by the bartender\n",
+    "\n",
+    "**Await awaitable** -> Stop the current servicing activity and proceed to another activity\n",
+    "\n",
+    "- **Await for coroutine** -> Same as above, and keep serving current customer until done or next appopriate pause\n",
+    "\n",
+    "- **Await for task** -> Same as above above, and see if any other activity need attention\n",
+    "\n",
+    "- **Suspended awaitable** -> Customer taking time to drink"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100622e0",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
