--- a/concurrency_related/asyncio_script/docu/concept/01_event_loop.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/01_event_loop.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "### event loop\n",
     "\n",
-    "- It contains a 'collection of jobs' / 'to-do list' to be 'run'\n",
+    "- It contains a 'collection of jobs' / 'to-do list' to be run\n",
     "- It works like a loop:\n",
-    "    - Select/invoke/give control/call/run a job\n",
+    "    - Invoke/Select/give control/call/run a job\n",
     "    - When the job pauses/completes, control is returned to the event loop\n",
     "    - Repeat endlessly\n",
     "- If no job is pending execution, the loop is smart enough to simply rest and resume when needed.\n",
