--- a/concurrency_related/asyncio_script/docu/concept/02_async_func_coro_gen_iter.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/02_async_func_coro_gen_iter.ipynb
@@ -10,9 +10,9 @@
     "A generalised subroutine that can be entered, exited, resumed. This allows for asynchronous behavior.\n",
     "\n",
     "- It represents the async function's body\n",
-    "- It's state is stored in the `cr_...` attributes\n",
     "- It is created by running coroutine function (B)\n",
     "    - Coroutine function is defined by `async def` (A), which allows `await`, `async for`, and `async with` to be used within\n",
+    "- It's state is stored in the `cr_...` attributes\n",
     "- Coroutine and coro func are based on generator iterator (type = generator) and generator (generator function).\n",
     "    - Note, in earlier py versions, coro were implemented as generator iterator and uses yield from expression"
    ]
@@ -29,18 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a0dd73a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# coro declared with the async/await syntax is the preferred way of writing asyncio applications\n",
     "async def aprint(x:int): # A\n",
     "    print(f\"{x = }\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7ccef01a",
    "metadata": {},
    "outputs": [
@@ -56,7 +57,7 @@
     }
    ],
    "source": [
-    "coro = aprint(3) # B\n",
+    "coro = aprint(3) # B, calling coro won't schedule execution\n",
     "coro"
    ]
   },
