--- a/concurrency_related/asyncio_script/docu/concept/03_tasks.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/03_tasks.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Tasks\n",
     "\n",
-    "- Coroutine tied to event loop\n",
+    "- Coroutine tied to event loop. Used to schedule coroutines concurrently.\n",
     "    - It maintains list of callback functions (A), which are used in the event loop\n",
     "        - A callback is a subroutine function which is passed as an argument to be executed at some point in the future.\n",
     "    - On creation (B), it is auto scheduled for execution, by adding a callback to run it in the event loop's to-do list\n",
