--- a/concurrency_related/asyncio_script/docu/concept/04_await.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/04_await.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### await\n",
     "\n",
-    "Suspend the execution of coroutine on an awaitable object. \n",
+    "Suspend the execution of coroutine on an awaitable. \n",
     "- An awaitable object can be a coroutine or an object with `__await__` method.\n",
     "    - `__await__` method must return an iterator (usually a generator iterator).\n",
     "- Can only be used inside a coroutine function.\n",
@@ -21,7 +21,9 @@
     "                - When the awaited task is picked and finishes, add the callback to the event loop's to-do list\n",
     "    - Coroutine\n",
     "        - Does not cede control (Z), behavior same as normal funcs\n",
-    "        - Note this can be a way for asyncio to differentiate between task that need or not need CPU time."
+    "        - Note this can be a way for asyncio to differentiate between task that need or not need CPU time.\n",
+    "    - Future\n",
+    "        - The coroutine will wait until the Future is resolved in some other place."
    ]
   },
   {
