--- a/concurrency_related/asyncio_script/docu/concept/00_high_level_concepts.ipynb
+++ b/concurrency_related/asyncio_script/docu/concept/00_high_level_concepts.ipynb
@@ -84,6 +84,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c26ba0e1",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "History\n",
+    "\n",
+    "- Select sys call allow programs to list multiple sockets and be notified when any of them are ready for I/O, if none ready, block with timeout.\n",
+    "    - In the program, have a loop that wait for socket events.\n",
+    "- Event driven asyncronous networking libraries were built on top of select\n",
+    "- PEP 234 - Iterators: allow obj to provide next value so for loop is more powerful\n",
+    "- PEP 255 - Simple Generators: gen and use trampoline to keep alive\n",
+    "- PEP 342 - coroutines via enhanced generators\n",
+    "- PEP 380 - syntax for delegating to a subgenerator: gen consume another gen's handling is difficult, so use `yield from` to delegate\n",
+    "- PEP 3156 - Asynchronous IO Support Rebooted: asyncio module\n",
+    "- PEP 492, PEP 525, PEP 530 - syntax etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f149ea6",
    "metadata": {},
    "source": [
