--- a/concurrency_related/asyncio_script/docu/coroutines_tasks_related/tasks.ipynb
+++ b/concurrency_related/asyncio_script/docu/coroutines_tasks_related/tasks.ipynb
@@ -133,25 +133,228 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "57b2ed61",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Task groups\n",
+    "\n",
+    "Async context manager (A) that can create task and gives reliable way to wait for all tasks to finish.\n",
+    "\n",
+    "- Cancellation: Can be done by having a task raising a ignored exception (B).\n",
+    "- Exception handelling: If a task raises an exception, TaskGroup will cancel the remaining scheduled tasks (C)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fe744de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed coro with param: 0\n",
+      "Completed coro with param: 1\n",
+      "Completed coro with param: 2\n",
+      "Completed coro with param: 3\n",
+      "Completed coro with param: 4\n",
+      "Completed coro with param: 5\n",
+      "Completed coro with param: 6\n",
+      "Completed coro with param: 7\n",
+      "Completed coro with param: 8\n",
+      "Completed coro with param: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def some_coro(param):\n",
+    "    try:\n",
+    "        await asyncio.sleep(1)\n",
+    "    except asyncio.CancelledError:\n",
+    "        print(f\"Cancelled coro with param: {param}\")\n",
+    "        raise\n",
+    "    print(f\"Completed coro with param: {param}\")\n",
+    "\n",
+    "\n",
+    "async with asyncio.TaskGroup() as tg: # A 1\n",
+    "    for i in range(10):\n",
+    "        tg.create_task(some_coro(param=i))# A 2\n",
+    "\n",
+    "# await asyncio.sleep(0)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e416c198",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task 1: start\n",
+      "Task 2: start\n",
+      "Task 3: start\n",
+      "Task 4: start\n",
+      "Task 1: done\n",
+      "Task group terminated.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "from asyncio import TaskGroup\n",
+    "\n",
+    "class TerminateTaskGroup(Exception):\n",
+    "    pass\n",
+    "\n",
+    "async def force_terminate_task_group():\n",
+    "    raise TerminateTaskGroup()\n",
+    "\n",
+    "async def job(task_id, sleep_time):\n",
+    "    print(f'Task {task_id}: start')\n",
+    "    await asyncio.sleep(sleep_time)\n",
+    "    print(f'Task {task_id}: done')\n",
+    "\n",
+    "async def main():\n",
+    "    try:\n",
+    "        async with TaskGroup() as group:\n",
+    "            group.create_task(job(1, 0.5))\n",
+    "            group.create_task(job(2, 1.5))\n",
+    "            group.create_task(job(3, 2.5)) # C\n",
+    "            group.create_task(job(4, 3.5))\n",
+    "\n",
+    "            await asyncio.sleep(1)\n",
+    "\n",
+    "            group.create_task(force_terminate_task_group())\n",
+    "    except* TerminateTaskGroup: # exception group instead of normal exception\n",
+    "        print(\"Task group terminated.\")\n",
+    "        pass# B\n",
+    "\n",
+    "await main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eba271b0",
+   "metadata": {},
+   "source": [
+    "### asyncio.gather\n",
+    "\n",
+    "Coroutine are automatically scheduled as tasks (A).\n",
+    "- Cancellation: \n",
+    "    - Cancel the gather() to cancel all submitted tasks (B).\n",
+    "    - Cancelling a task raises CancelledError in the gather (C).\n",
+    "- Exception handling\n",
+    "    - return_exceptions: exception in result. (D)\n",
+    "    - not return_exceptions: propagate the first exception and continue the rest. (E)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e293899",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Task A: Compute factorial(2), currently i=2...\n",
+      "Task B: Compute factorial(3), currently i=2...\n",
+      "Task C: Compute factorial(4), currently i=2...\n",
+      "Task A: factorial(2) = 2\n",
+      "Task B: Compute factorial(3), currently i=3...\n",
+      "Task C: Compute factorial(4), currently i=3...\n",
+      "Task B: factorial(3) = 6\n",
+      "Task C: Compute factorial(4), currently i=4...\n",
+      "Task C: factorial(4) = 24\n",
+      "[2, 6, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "async def factorial(name, number):\n",
+    "    f = 1\n",
+    "    for i in range(2, number + 1):\n",
+    "        print(f\"Task {name}: Compute factorial({number}), currently i={i}...\")\n",
+    "        await asyncio.sleep(1)\n",
+    "        f *= i\n",
+    "    print(f\"Task {name}: factorial({number}) = {f}\")\n",
+    "    return f\n",
+    "\n",
+    "async def main():\n",
+    "    L = await asyncio.gather(   \n",
+    "        factorial(\"A\", 2), # A\n",
+    "        factorial(\"B\", 3),\n",
+    "        factorial(\"C\", 4),\n",
+    "    )\n",
+    "    print(L)\n",
+    "\n",
+    "await main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7db6f9",
+   "metadata": {},
+   "source": [
+    "### sleep\n",
+    "\n",
+    "Suspend current task and allow other to run. (A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0be54af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-11-12 22:51:31.563430\n",
+      "2025-11-12 22:51:32.070392\n",
+      "2025-11-12 22:51:32.585707\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "import datetime\n",
+    "\n",
+    "async def display_date():\n",
+    "    loop = asyncio.get_running_loop()\n",
+    "    end_time = loop.time() + 1.5\n",
+    "    while True:\n",
+    "        print(datetime.datetime.now())\n",
+    "        if (loop.time() + 0.5) >= end_time:\n",
+    "            break\n",
+    "        await asyncio.sleep(0.5) # A\n",
+    "\n",
+    "await display_date()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c0a54cd",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab7db6f9",
+   "id": "af231bf7",
    "metadata": {},
    "outputs": [],
    "source": []
