add condition syspath to snippets

--- a/snippets/snippets_notes.ipynb
+++ b/snippets/snippets_notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3691f2d0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8e62fa6f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "40f30c48",
    "metadata": {},
    "outputs": [
@@ -40,17 +40,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\".groupby([''], dropna=False, group_keys=False).apply(\",\n",
-      "\"    lambda x: (x - x.mean()) / x.std()\",\n",
-      "\")\",\n"
+      "\"_lib_path = Path(__file__).parents[1].as_posix() # or Path().cwd() for notebook\",\n",
+      "\"if _lib_path not in sys.path:\",\n",
+      "\"    sys.path.append(_lib_path)\",\n"
      ]
     }
    ],
    "source": [
     "func_str = \"\"\"\n",
-    ".groupby([''], dropna=False, group_keys=False).apply(\n",
-    "    lambda x: (x - x.mean()) / x.std()\n",
-    ")\n",
+    "_lib_path = Path(__file__).parents[1].as_posix() # or Path().cwd() for notebook\n",
+    "if _lib_path not in sys.path:\n",
+    "    sys.path.append(_lib_path)\n",
     "\"\"\"\n",
     "\n",
     "print(reformat(func_str))"
