--- a/plot_related/mpl_notes/addons/xticklabels_formatter.ipynb
+++ b/plot_related/mpl_notes/addons/xticklabels_formatter.ipynb
@@ -29,6 +29,9 @@
     "ax.yaxis.set_major_locator(mpl.ticker.MultipleLocator(100))\n",
     "ax.yaxis.set_minor_locator(mpl.ticker.AutoMinorLocator(2))\n",
     "\n",
+    "ax.yaxis.set_major_locator(mpl.ticker.MaxNLocator(nbins=5))\n",
+    "ax.yaxis.set_major_formatter(mpl.ticker.PercentFormatter(1.0, decimals=0))\n",
+    "\n",
     "fig"
    ]
   },
